sign up for promotion and card type now update accordingly

--- a/bookstore/templates/bookstore/edit_profile.html
+++ b/bookstore/templates/bookstore/edit_profile.html
@@ -23,7 +23,7 @@
         </div>
         <div class="custom-control custom-checkbox" style="padding-bottom: 15px;">
             {{ form.promotion_sign_up }}
-            <label class="custom-control-label" for="promote">Sign up for promotions and lattest news.</label>
+            <label class="custom-control-label" for="promote">Sign up for promotions and latest news.</label>
         </div>
         <h3>Shipping Address (Optional)</h3>
         <div class="form-group">
