--- a/bookstore/templates/bookstore/book_detail.html
+++ b/bookstore/templates/bookstore/book_detail.html
@@ -15,7 +15,7 @@
 			{% endfor %}
 			{% endwith %}
 			
-            <p style="font-size: 25px;">$35.96</p>
+            <p style="font-size: 25px;">{{book.selling_price}}</p>
             <strong>Description:</strong>
             <br>
             
