--- a/bookstore/templates/bookstore/change_password.html
+++ b/bookstore/templates/bookstore/change_password.html
@@ -20,6 +20,13 @@
                 <input type="password" class="form-control" name="newPass2" placeholder="Password">
             </div>
         </div>
+        {% if messages %}
+            <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
         <button type="submit" class="btn obs-button-primary">Submit</button>
     </form>
 {% endblock content %}
