--- a/bookstore/templates/bookstore/base.html
+++ b/bookstore/templates/bookstore/base.html
@@ -57,8 +57,8 @@
                                         <input type="password" class="form-control" name="password" required>
                                     </div>
                                     <div class="form-group form-check">
-                                        <input type="checkbox" class="form-check-input" id="Check1">
-                                        <label class="form-check-label" for="remember">Remember me</label>
+                                        <input type="checkbox" class="form-check-input" id="Check1" name="remember_me">
+                                        <label class="form-check-label" for="remember" >Remember me</label>
                                         <br>
                                     </div>
                                     <button type="submit" class="btn obs-button-primary">Login</button>
