--- a/bookstore/templates/bookstore/edit_profile.html
+++ b/bookstore/templates/bookstore/edit_profile.html
@@ -68,6 +68,7 @@
 
         <div class="row">
             <div class="col-md-9 mb-3">
+                <label for="cc-type">Card Type</label>
                 {{ form.card_type }}
             </div>
         </div>
