--- a/bookstore/templates/bookstore/register.html
+++ b/bookstore/templates/bookstore/register.html
@@ -109,6 +109,7 @@
         <h4 class="mb-3">Payment</h4>
         <div class="row">
             <div class="col-md-9 mb-3">
+                <label for="cc-type">Card Type</label>
                 {{ form.card_type }}
             </div>
         </div>
