--- a/bookstore/templates/bookstore/base.html
+++ b/bookstore/templates/bookstore/base.html
@@ -33,59 +33,63 @@
                     <div class="col-5">
                         <!-- Reserve for links -->
                         {% if user.is_authenticated %}
-                            {% if user.first_name %}
-                                <a>Hello, {{user.first_name}}</a>
-                            {% else %}
-                                <a>Hello, {{user.username}}</a>
-                            {% endif %}
+                        {% if user.first_name %}
+                        <a>Hello, {{user.first_name}}</a>
+                        {% else %}
+                        <a>Hello, {{user.username}}</a>
+                        {% endif %}
                         {% endif %}
                     </div>
                     <div class="col-7 obs-toolbar-r">
                         {% if user.is_anonymous %}
-                            <a data-fancybox data-src="#obs-login-modal" data-modal="true" href="javascript:;"><i
-                                    class="fas fa-sign-in-alt"></i> Login</a>
-                            <div style="display: none;min-width:600px;" id="obs-login-modal">
-                                <h2>Login</h2>
-                                <form method="post" action ="{% url 'login' %}">
-                                    {% csrf_token %}
-                                    <div class="form-group" >
-                                        <label for="InputEmail1">User ID (Required)</label>
-                                        <input type="text" class="form-control" name="username" required>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="InputPassword1">Password (Required)</label>
-                                        <input type="password" class="form-control" name="password" required>
-                                    </div>
-                                    <div class="form-group form-check">
-                                        <input type="checkbox" class="form-check-input" id="Check1" name="remember_me">
-                                        <label class="form-check-label" for="remember" >Remember me</label>
-                                        <br>
-                                    </div>
-                                    <button type="submit" class="btn obs-button-primary">Login</button>
-                                    <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
-                                    <br>
-                                    <a data-fancybox data-src="#obs-forget-modal" data-modal="true" href="javascript:;"></i>Forgot password?</a>
-                                </form>
-                                <div style="display: none;min-width:600px;" id="obs-forget-modal">
-                                    <form method="post" action ="{% url 'reset_password' %}">
-                                        {% csrf_token %}
-                                        <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
-                                        <div class="form-group" >
-                                            <label for="id_email">Email address (Required)</label>
-                                            <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
-                                            <input type="email" class="form-control" name="email" autocomplete="email" maxlength="254" required="" id="id_email">
-                                        </div>
-                                        <button type="submit" class="btn obs-button-primary">Send</button>
-                                        <button class="btn obs-button-primary" onclick="window.location.href = '{% url 'bookstore_home' %}';">Cancel</button>
-                                    </form>
+                        <a data-fancybox data-src="#obs-login-modal" data-modal="true" href="javascript:;"><i
+                                class="fas fa-sign-in-alt"></i> Login</a>
+                        <div style="display: none;min-width:600px;" id="obs-login-modal">
+                            <h2>Login</h2>
+                            <form method="post" action="{% url 'login' %}">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label for="InputEmail1">User ID (Required)</label>
+                                    <input type="text" class="form-control" name="username" required>
                                 </div>
+                                <div class="form-group">
+                                    <label for="InputPassword1">Password (Required)</label>
+                                    <input type="password" class="form-control" name="password" required>
+                                </div>
+                                <div class="form-group form-check">
+                                    <input type="checkbox" class="form-check-input" id="Check1" name="remember_me">
+                                    <label class="form-check-label" for="remember">Remember me</label>
+                                    <br>
+                                </div>
+                                <button type="submit" class="btn obs-button-primary">Login</button>
+                                <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
+                                <br>
+                                <a data-fancybox data-src="#obs-forget-modal" data-modal="true"
+                                    href="javascript:;"></i>Forgot password?</a>
+                            </form>
+                            <div style="display: none;min-width:600px;" id="obs-forget-modal">
+                                <form method="post" action="{% url 'reset_password' %}">
+                                    {% csrf_token %}
+                                    <p>Forgotten your password? Enter your email address below, and we’ll email
+                                        instructions for setting a new one.</p>
+                                    <div class="form-group">
+                                        <label for="id_email">Email address (Required)</label>
+                                        <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+                                        <input type="email" class="form-control" name="email" autocomplete="email"
+                                            maxlength="254" required="" id="id_email">
+                                    </div>
+                                    <button type="submit" class="btn obs-button-primary">Send</button>
+                                    <button class="btn obs-button-primary"
+                                        onclick="window.location.href = '{% url 'bookstore_home' %}';">Cancel</button>
+                                </form>
                             </div>
-                            <a href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Register</a>
+                        </div>
+                        <a href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Register</a>
                         {% endif %}
                         {% if user.is_authenticated %}
-                            <a href="{% url 'shopping_cart' %}"><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
-                            <a href="{% url 'edit_profile' %}"><i class="fas fa-user"></i> Profile</a>
-                            <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> logout</a>
+                        <a href="{% url 'shopping_cart' %}"><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
+                        <a href="{% url 'edit_profile' %}"><i class="fas fa-user"></i> Profile</a>
+                        <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> logout</a>
                         {% endif %}
                     </div>
                 </div>
@@ -103,16 +107,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'bookstore_home' %}"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{% url 'bookstore_home' %}"><i class="fas fa-home"></i> Home <span
+                                    class="sr-only">(current)</span></a>
                         </li>
                     </ul>
-                    <form class="form-inline" method="post" action ="{% url 'search' %}">
+                    <form class="form-inline" method="post" action="{% url 'search' %}">
                         {% csrf_token %}
-                        <input class="form-control obs-search" type="search" placeholder="Search" aria-label="Search" name="search_text_top">
+                        <input class="form-control obs-search" type="search" placeholder="Search" aria-label="Search"
+                            name="search_text_top">
                         <button class="btn my-sm-0 obs-search-button" type="submit">Search</button>
                     </form>
-                    <a href="search"><button class="btn my-sm-0 obs-search-button" style="border-left: 1px solid white">Advanced
-                        Search</button></a>
+                    <a href="search"><button class="btn my-sm-0 obs-search-button"
+                            style="border-left: 1px solid white">Advanced
+                            Search</button></a>
                 </div>
             </div>
         </nav>
