added checkout functionality, fixed db again (and I think finally), and fixed search

--- a/bookstore/templates/bookstore/shopping_cart.html
+++ b/bookstore/templates/bookstore/shopping_cart.html
@@ -19,4 +19,5 @@
         {% endfor %}
         Total: $45
     </div>
+    <button style="width:40%;" class="btn obs-button-primary" onclick="window.location.href = '{% url 'checkout' %}';">Checkout</button>
 {% endblock content %}
