--- a/bookstore/templates/bookstore/check_out.html
+++ b/bookstore/templates/bookstore/check_out.html
@@ -41,133 +41,106 @@
                 </div>
                 Total: $45
             </div>
-            <form class="card p-2" style="border-radius: 0;" _lpchecked="1">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Promo code">
-                    <div class="input-group-append">
-                        <button type="submit" class="btn btn-secondary">Redeem</button>
-                    </div>
-                </div>
-            </form>
+            <div class="form-group">
+                <label for="inputPromoCode">Promo Code</label>
+                {{ form.promo_code }}
+                {% for error in form.promo_code.errors %}
+                        <p style="color: red">{{ error }}</p>
+                {% endfor %}
+            </div>
         </div>
         <div class="col-md-8 order-md-1">
             <h4 class="mb-3">Billing address</h4>
-            <form class="needs-validation" novalidate="">
+            <form method="post" action="{% url 'checkout' %}">
+                {% csrf_token %}
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="firstName">First name</label>
-                        <input type="text" class="form-control" id="firstName" placeholder="" value="John" required="">
-                        <div class="invalid-feedback">
-                            Valid first name is required.
-                        </div>
+                        {{ form.first_name }}
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="lastName">Last name</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="" value="Doe" required="">
-                        <div class="invalid-feedback">
-                            Valid last name is required.
-                        </div>
+                        {{ form.last_name }}
                     </div>
                 </div>
 
 
                 <div class="mb-3">
                     <label for="email">Email <span class="text-muted">(Optional)</span></label>
-                    <input type="email" class="form-control" id="email" placeholder="you@example.com"
-                        value="johndoe@example.com">
-                    <div class="invalid-feedback">
-                        Please enter a valid email address for shipping updates.
-                    </div>
+                    {{ form.email }}
                 </div>
 
-                <div class="mb-3">
-                    <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address" placeholder="1234 Main St"
-                        value="200 D. W. Brooks Drive" required="">
-                    <div class="invalid-feedback">
-                        Please enter your shipping address.
-                    </div>
+                <h3>Shipping Address</h3>
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    {{ form.ship_street }}
                 </div>
-
-                <div class="mb-3">
-                    <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-                    <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                </div>
-
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputCity">City</label>
-                        <input type="text" class="form-control" id="inputCity" placeholder="Athens" value="Athens">
+                        {{ form.ship_city }}
                     </div>
                     <div class="form-group col-md-4">
                         <label for="inputState">State</label>
-                        <input type="text" class="form-control" id="inputState" placeholder="GA" value="GA">
+                        {{ form.ship_state }}
                     </div>
                     <div class="form-group col-md-2">
                         <label for="inputZip">Zip</label>
-                        <input type="text" class="form-control" id="inputZip" placeholder="30602" value="30602">
+                        {{ form.ship_zip_code }}
+                    </div>
+                </div>
+
+                <h3>Billing Address</h3>
+                <div class="mb-3">
+                    <label for="address">Address</label>
+                    {{ form.bill_street }}
+                    {% for error in form.bill_street.errors %}
+                            <p style="color: red">{{ error }}</p>
+                    {% endfor %}
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputCity">City</label>
+                        {{ form.bill_city }}
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputState">State</label>
+                        {{ form.bill_state }}
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="inputZip">Zip</label>
+                        {{ form.bill_zip_code }}
                     </div>
                 </div>
                 <hr class="mb-4">
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="same-address">
-                    <label class="custom-control-label" for="same-address">Shipping address is the same as my
-                        billing address</label>
-                </div>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="save-info">
-                    <label class="custom-control-label" for="save-info">Save this information for next
-                        time</label>
+                <div class="custom-control custom-checkbox" style="padding-bottom: 15px;">
+                    {{ form.ship_is_billing }}
+                    <label class="custom-control-label" for="ship_is_billing">Shipping address is the same as my billing address</label>
                 </div>
                 <hr class="mb-4">
 
                 <h4 class="mb-3">Payment</h4>
 
-                <div class="d-block my-3">
-                    <div class="custom-control custom-radio">
-                        <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked=""
-                            required="">
-                        <label class="custom-control-label" for="credit">Credit card</label>
-                    </div>
-                    <div class="custom-control custom-radio">
-                        <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                        <label class="custom-control-label" for="debit">Debit card</label>
+                <div class="row">
+                    <div class="col-md-9 mb-3">
+                        <label for="cc-type">Card Type</label>
+                        {{ form.card_type }}
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <label for="cc-name">Name on card</label>
-                        <input type="text" class="form-control" id="cc-name" placeholder="" value="John Doe" required="">
-                        <small class="text-muted">Full name as displayed on card</small>
-                        <div class="invalid-feedback">
-                            Name on card is required
-                        </div>
-                    </div>
                     <div class="col-md-6 mb-3">
                         <label for="cc-number">Credit card number</label>
-                        <input type="text" class="form-control" id="cc-number" placeholder="" value="1111222233334444"
-                            required="">
-                        <div class="invalid-feedback">
-                            Credit card number is required
-                        </div>
+                        {{ form.card_no }}
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-md-3 mb-3">
                         <label for="cc-expiration">Expiration</label>
-                        <input type="text" class="form-control" id="cc-expiration" placeholder="" value="11/11" required="">
-                        <div class="invalid-feedback">
-                            Expiration date required
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <label for="cc-expiration">CVV</label>
-                        <input type="text" class="form-control" id="cc-cvv" placeholder="" value="123" required="">
-                        <div class="invalid-feedback">
-                            Security code required
-                        </div>
+                        {{ form.exp_date }}
+                        {% for error in form.exp_date.errors %}
+                            <p style="color: red">{{ error }}</p>
+                        {% endfor %}
                     </div>
                 </div>
+
                 <hr class="mb-4">
                 <button class="btn obs-button-primary btn-lg btn-block" type="submit">Continue to checkout</button>
             </form>
