--- a/bookstore/templates/bookstore/book_detail.html
+++ b/bookstore/templates/bookstore/book_detail.html
@@ -22,7 +22,8 @@
             <form class="form-inline" method="post" action="{% url 'add_to_cart' pk=book.pk %}">
                 {% csrf_token %}
                 <div class="form-group mb-2">
-                    <input type="number" class="form-control" id="bookquantity" name="bookquantity" min="1" value="1">
+                    <input type="number" class="form-control" id="quantity" name="quantity" min="1"
+                    	 value="1">
                 </div>
                 <button type="submit" class="btn obs-button-primary mb-2 mx-sm-3">Add to Cart</button>
             </form>
