--- a/bookstore/templates/bookstore/shopping_cart.html
+++ b/bookstore/templates/bookstore/shopping_cart.html
@@ -3,21 +3,38 @@
     <h2>Shopping Cart</h2>
     <hr>
     <div class="obs-checkout-cart">
+
         {% for item in items %}
             {% if item.book %}
                 <div class="obs-checkout-cart-item">
                     <div style="width: 50%; float: left;"> {{ item.book.title }} </div>
-                    <div style="width: 50%; float: left;">Price: $20</div>
+                    <div style="width: 50%; float: left;">{{ item.book.selling_price  }}</div>
                 </div>
                 <div class="obs-checkout-cart-item-mod">
-                    <input style="width:20%; display: inline; margin: 0;border: none; padding-left: 10px;" type="number"
-                        id="bookquantity" name="bookquantity" min="1" value="1">
-                    <button style="width:40%;" class="btn obs-button-primary">Update</button>
-                    <button style="width:36%; background-color: red; color:white;" class="btn">Remove</button>
-                </div>
+                    <form method="post" action="{% url 'shopping_cart_with_pk' pk=item.book.pk%}">
+                        {% csrf_token %}
+                        <input style="width:20%; display: inline; margin: 0;border: none; padding-left: 10px;" type="number"
+                            id="quantity" name="quantity" min="1" value={{item.quantity}}>
+                        <button style="width:36%;" class="btn obs-button-primary" type="submit">Update</button>
+                        {% if messages %}
+                            <ul class="messages">
+                                {% for message in messages %}
+                                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
+                    </form>
+                    <form method="post" action="{% url 'remove' pk=item.book.pk %}">
+                        {% csrf_token %}
+                        <button style="width:32%; background-color: red; color:white;" class="btn" type="submit">Remove</button>
+                    </form>
+                 </div>
             {% endif %}
         {% endfor %}
-        Total: $45
+        Total: $ {{ total }}
     </div>
-    <button style="width:40%;" class="btn obs-button-primary" onclick="window.location.href = '{% url 'checkout' %}';">Checkout</button>
+    {% if items.count > 0 %}
+        <button style="width:36%;" class="btn obs-button-primary" type="submit" onclick="window.location.href = '{% url 'checkout' %}';">
+        Checkout</button>
+    {% endif %}
 {% endblock content %}
