--- a/bookstore/templates/bookstore/search_view.html
+++ b/bookstore/templates/bookstore/search_view.html
@@ -18,7 +18,7 @@
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="radio" name="search-radio-group" id="BookTitle" value="b">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="BookTitle" value="t">
       <label class="form-check-label" for="BookTitle">
         Book Title
       </label>
