fix bottom link

--- a/bookstore/templates/bookstore/base.html
+++ b/bookstore/templates/bookstore/base.html
@@ -137,7 +137,7 @@
                         <h4>Quick Links</h4>
                         <ul>
                             <li><a href="{% url 'bookstore_home' %}">Home</a></li>
-                            <li><a href="search">Search</a></li>
+                            <li><a href="{% url 'search' %}">Search</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
